Prevent menu overflowing on small screens

--- a/components/photo-gallery/photo-gallery.css
+++ b/components/photo-gallery/photo-gallery.css
@@ -7,7 +7,7 @@
     margin-top: 40px;
 }
 .photo-gallery > div {
-    width: 350px;
+    max-width: calc(100vw - 120px);
     animation-delay: 0.5s;
 }
 .photo-gallery-photo-wrapper {
